--- a/css/styless.css
+++ b/css/styless.css
@@ -272,9 +272,10 @@ main h2 {
   margin-top: 30px;
 }
 
-/*modal*/
+/*Modal*/
 
 .modal{
+  padding: 40px;
   width: 528px;
   height: 581px;
 }
@@ -287,9 +288,11 @@ main h2 {
   display: none;
 }
 .backdrop{
-  position: fixed;
-  left: 536px;
-  top: 221px;
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  left: 535px;
+  top: 222.5px;
   background:var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -298,7 +301,7 @@ main h2 {
   transition:opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* MODAL CLOSE */
+/*Modal Close*/
 
 .button-close svg {
   padding: 5px 4px 4px 5px;
@@ -324,194 +327,131 @@ main h2 {
   transition-duration: 500ms;
   transform: scale(1.5);
 }
+/*Form*/
 
-/*Form Modal*/
-
-.main-tittle .backdrop .modal-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 528px;
-  height: 581px;
-  padding: 40px;
-}
-.main-tittle .backdrop .modal-form svg{
-  fill: var(--color-tex-primary);
-}
-.main-tittle .backdrop .modal-form .title-form{
+.title-form{
+  font-family: 'Roboto';
+  font-style: normal;
   font-weight: 700;
   font-size: 20px;
   line-height: 23px;
-  letter-spacing: 0.03em;
   text-align: center;
-  color: var(--color-tex-primary);
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 12px;
 }
-.main-tittle .backdrop .modal-form .form .modal-form label {
-  margin-bottom: 4px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-}
-.main-tittle .backdrop .modal-form .modal-form label {
-  display: block;
-  position: relative;
-  width: 448px;
-  margin: 4px 2px;
-}
-.main-tittle .backdrop .modal-form .modal-form input {
-  height: 40px;
-  margin: 0px;
-  padding: 12px 40px;
-  width: 100%;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  font-size: 16px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-}
-.main-tittle .backdrop .modal-form .modal-form label .modal-form .icon {
-  position: absolute;
-  top: 35px;
-  left: 12px;
-  transform: translateY(-50%);
-}
-.main-tittle .backdrop .modal-form input:hover {
-  border: 1px solid rgba(33, 33, 33, 0.7);
-}
-.modal-form input:focus {
-  outline: transparent;
-  border: 1px solid var(--background-color2);
-}
-.main-tittle .backdrop .modal-form label:focus-within .modal-form .icon {
-  fill: var(--background-color2);
-}
-.main-tittle .backdrop .text-label {
-  display: block;
-  margin-bottom: 10px;
-}
-.main-tittle .backdrop .comment-input {
-  padding: 12px 16px;
-  width: 448px;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-.main-tittle .backdrop .comment-input:hover {
-  border: 1px solid rgba(33, 33, 33, 0.7);
-}
-.main-tittle .backdrop .comment-input:focus {
-  outline: transparent;
-  border: 1px solid var(--background-color2);
-}
-.main-tittle .backdrop .comment-field textarea::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  color: var(--color-text-secundary);
-}
-
-/* CHECKBOX */
-
-.main-tittle .backdrop .checkbox {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-.main-tittle .backdrop .checkbox-label {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-}
-.main-tittle .backdrop .icon-check {
-  margin-right: 7px;
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--color-tex-primary);
-  border-radius: 2px;
-}
-.main-tittle .backdrop .label-checkbox:hover .icon-check {
-  background-color: rgba(126, 122, 122, 0.1);
-}
-.main-tittle .backdrop .label-checkbox:active .icon-check {
-  border: 2px solid rgba(107, 99, 99, 0.7);
-}
-.main-tittle .backdrop .checkbox:checked + .icon-check {
-  border-radius: 2px;
-  width: 16px;
-  height: 15px;
-  border-color: var(--accent-color);
-  background-color: var(--accent-color);
-  background-image: url(/Img/check.svg);
-  background-origin: border-box;
-}
-.main-tittle .backdrop .checkbox:checked:hover + .icon-check {
-  border-color: transparent;
-  background-image: url(/Img/check.svg),
-    linear-gradient(to right, rgba(47, 48, 58, 0.2), rgba(47, 48, 58, 0.2));
-}
-.main-tittle .backdrop .checkbox:checked:active + .icon-check {
-  border-color: transparent;
-  background-image: url(/Img/check.svg),
-    linear-gradient(
-      to right,
-      rgba(233, 234, 236, 0.2),
-      rgba(233, 234, 236, 0.2)
-    );
-}
-.main-tittle .backdrop .checkbox-text {
+.form{
   display: flex;
   flex-direction: column;
-  margin: 35px 10px 10px 10px;
+  justify-content: space-between;
 }
-.main-tittle .backdrop .form-text:hover,
-.main-tittle .backdrop .form-text:hover .link-checkbox,
-.main-tittle .backdrop .link-checkbox:hover {
-  color: rgba(33, 33, 33, 0.9);
-}
-.main-tittle .backdrop .link-checkbox {
-  text-decoration: underline;
-  color: var(--color-tex-primary);
-
-}
-.main-tittle .backdrop .modal .button-submit {
+.form-label{
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
-  height: 50px;
-  padding: 10px 55px;
-  color: var(--primary-background-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border: 1px solid transparent;
+  flex-direction: column;
+}
+.form label:focus .form-input .icon-form use {
+  fill: var(--background-color2);
+}
+textarea#comments {
+  padding: 12px 16px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  color: rgba(117, 117, 117, 0.5);
+  resize: none;
+  width: 448px;
+  height: 80px;
+}
+.label-text{
+  margin-bottom: 4px;
+  width: 448px;
+  height: 14px;
+  display: flex;
+  justify-content: flex-start;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--color-text-secundary);
+}
+.form-input{
+  cursor: pointer;
+  padding-left: 40px;
+  margin-bottom: 10px;
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+  color:rgba(117, 117, 117, 0.5);
+}
+
+.form-input:focus{
+  border: 1px solid var(--accent-color);
   outline: transparent;
 }
-.main-tittle .backdrop .modal-form .button-submit:hover {
-  background-color: #1e8ce6dc;
+.form-label:focus-within .icon-form {
+  fill: var(--accent-color);
 }
-.main-tittle .backdrop .modal-form .button-submit:active {
-  background-color: #1e8ce6dc;
+
+.form-policy{
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--color-text-secundary);
+}
+.send{
+  cursor: pointer;
+  margin:20px 124px 1px 124px;
+  width: 200px;
+  height: 50px;
+  background: #188CE8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: var(--primary-background-color);
+}
+.send:hover,
+.send:focus {
+  background-color: var(--accent-color);
+}
+
+/*icon*/
+
+.icon-form{
+  position: relative;
+  bottom: 38px;
+  left: 15px;
+  fill: #212121;
+}
+
+/*Custom Check*/
+
+.check{
+  width: 423px;
+  height: 24px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.check-input{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.check-icon{
+  background: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 1);
+  transition: var(--transition-time) var(--timing-function);
+}
+.check-input:checked + .check-icon{
+  background-color: var(--background-color2);
+  border: var(--background-color2);
 }
 
 /*Nuestras ventajas*/
